# save-manager

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  data.rs  functions.rs  main.rs  types.rs
