[package]
name = "save-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
copy_dir = "0.1.2"
dirs = "5.0.1"
serde = {version="1.0.164", features=["derive"]}
serde_json = "1.0.99"
