[package]
name = "save-manager"
version = "0.1.1"
edition = "2021"
authors = ["Bennett Gillig"]
description = "Manages saves"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.10", features=["derive", "color", "unstable-styles"]}
anstyle = "1.0.0"
copy_dir = "0.1.2"
dirs = "5.0.1"
serde = {version="1.0.164", features=["derive"]}
serde_json = "1.0.99"
colored = "2.0.0"
chrono = "0.4.26"
itertools = "0.11.0"
